tests/ui/unsorted-struct.stderr
error: a should sort before d
 --> $DIR/unsorted-struct.rs:8:5
  |
8 |     a: usize,
  |     ^
